@@ -360,6 +360,13 @@ webui.licence_bundle.show = false
 # webui.browse.index.title = dc.title
 # webui.browse.index.subject = dc.subject.*
 
+### MyDSpace display of group membership
+#
+# if omitted, the default behaviour is false
+# 
+# webui.mydspace.showgroupmemberships = false
+
+
 
 ##### SFX Server #####
 
